--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ button {
 header {
   min-height: 100vh;
   width: 100%;
-  background: url("././img/bg.jpg") no-repeat top center / cover;
+  background: url("../img/bg.jpg") no-repeat top center / cover;
   position: relative;
 }
 
